Added application 5 - custom dialogs